# pacman

./: #plugins.cfg#  CMakeLists.txt  README  build.sh  makefile  ogre.cfg  pacman  pacman.project  pacman_records.txt  plugins.cfg  resources.cfg  resources.xml  sounds.xml
blender/: #level1.xml#  Galaxian.mesh  Galaxian.mesh.xml  MatPill.material  bocaGhost.blend  bocaGhost.blend1  campana.blend  campana.blend1  cereza.blend  cereza.blend1  exportLevel.py  fresa.blend  fresa.blend1  galaxian.blend  galaxian.blend1  galaxian.scene  generateLevelReadme.txt  ghost.blend  ghost.blend1  level1.blend  level1.blend1  level1.mesh  level1.mesh.xml  level1.xml  level1Back.xml  level2.xml~  levelName.xml  levelTemplate.blend  levelTemplate.blend1  llave.blend  llave.blend1  manzana.blend  manzana.blend1  naranja.blend  naranja.blend1  ojosGhost.blend  pacman.blend  pacman.blend1  pacman3.blend  pacman3.blend1  (+8 more)
gimpmedia/: campana.xcf  cereza.xcf  fresa.xcf  galaxian.xcf  llave.xcf  manzana.xcf  naranja.xcf  ojillo.xcf  sam_gfx.xcf  textOjosPacman.xcf  uvas.xcf
include/: #IntroState.h#  #pacman.h#  ControlsState.h  Fruit.h  FruitFactory.h  GameManager.h  GameState.h  InputManager.h  InputManager_.h  IntroState.h  MenuState.h  OgreUtil.h  OgreUtil.h~  PauseState.h  PlayState.h  RecordsState.h  graphml_boost.h  pacman.h  phantom.h  phantom.h~  phantomFactory.h  phantomFactory.h~  pill.h  records.h  sounds.h
media/: Campana.mesh  Campana.mesh.xml  Campana.skeleton  Campana.skeleton.xml  Cereza.mesh  Cereza.mesh.xml  Cereza.skeleton  Cereza.skeleton.xml  Fresa.mesh  Fresa.mesh.xml  Fresa.skeleton  Fresa.skeleton.xml  Galaxian.mesh.xml  Galaxian.skeleton  Galaxian.skeleton.xml  Llave.mesh  Llave.mesh.xml  Llave.skeleton  Llave.skeleton.xml  Manzana.mesh  Manzana.mesh.xml  Manzana.skeleton  Manzana.skeleton.xml  MatLevel.material  MatPillTranspa.material  Material.material  MaterialCampana.material  MaterialCereza.material  MaterialFresa.material  MaterialGalaxian.material  MaterialLlave.material  MaterialManzana.material  MaterialNaranja.material  MaterialPacman.material  MaterialUvas.material  Naranja.mesh  Naranja.mesh.xml  Naranja.skeleton  Naranja.skeleton.xml  Pacman.mesh  (+70 more)
mygui/: README
mygui/Media/: PACMAN_MEDIA.tgz
mygui/Media/MyGUI_Media/: MyGUI_Fonts.xml
mygui/Media/PACMAN/: pacman_controls.layout  pacman_play.layout  pacman_records.layout  pacman_start.layout
src/: #IntroState.cpp#  #graphml_boost.cpp#  .#IntroState.cpp  ControlsState.cpp  Fruit.cpp  FruitFactory.cpp  GameManager.cpp  InputManager.cpp  IntroState.cpp  MenuState.cpp  PauseState.cpp  PlayState.cpp  RecordsState.cpp  graphml_boost.cpp  main.cpp  ogreUtil.cpp  ogreUtil.cpp~  pacman.cpp  phantom.cpp  phantom.cpp~  phantomFactory.cpp  phantomFactory.cpp~  pill.cpp  records.cpp  sounds.cpp
